examples/neg/namer/local_interface.effekt
def main() = try {
  interface Greet { def sayHello(): Unit }
  do sayHello()
} with Greet {
  def sayHello() = { println("Hello!"); resume(()) }
}